:sparkles: Page content styling

--- a/index.html
+++ b/index.html
@@ -60,72 +60,172 @@
                 </a>
 
                 <div class="d-flex gap-4">
-                    <button class="btn-account btn-login btn px-5 py-2 rounded-4">Log In</button>
-                    <button class="btn-account btn-signup btn px-5 py-2 rounded-4">Sign Up</button>
+                    <button
+                        class="btn-account btn-login btn px-5 py-2 rounded-4"
+                    >
+                        Log In
+                    </button>
+                    <button
+                        class="btn-account btn-signup btn px-5 py-2 rounded-4"
+                    >
+                        Sign Up
+                    </button>
                 </div>
             </header>
 
-            <section class="platforms">
-                <button>Max</button>
-                <button>Netflix</button>
-                <button>Disney</button>
-                <button>Prime</button>
-                <button>Claro</button>
-                <button>Paramount</button>
-            </section>
+            <!--             <section class="d-flex justify-content-between align-items-center"> -->
+            <!-- <section class="carousel slide">
+                <div class="carousel-inner slides5">
+                    <div class="carousel-item active">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Max
+                        </button>
+                    </div>
+                    <div class="carousel-item">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Netflix
+                        </button>
+                    </div>
+                    <div class="carousel-item">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Disney
+                        </button>
+                    </div>
+                    <div class="carousel-item">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Prime
+                        </button>
+                    </div>
+                    <div class="carousel-item">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Claro
+                        </button>
+                    </div>
+                    <div class="carousel-item">
+                        <button
+                            class="btn-platform btn rounded-4"
+                        >
+                            Paramount
+                        </button>
+                    </div>
+                </div>
+            </section> -->
 
-            <section class="movies">
-                <article>
-                    <h2>Destacado</h2>
-                    <img src="assets/img/casa-de-papel.webp" alt="" />
-                    <p>La Casa de Papel</p>
-                    <p>
+            <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner" data-bs-visible="3">
+                  <div class="carousel-item active">
+                    <img src="assets/img/magic-ball.webp" class=" w-25" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/magic-ball-lines.webp" class=" w-25" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="assets/img/magic-ball.webp" class=" w-25" alt="...">
+                  </div>
+                </div>
+                
+              </div> -->
+
+            <section class="d-flex justify-content-between row">
+                <article class="col-5">
+                    <h2 class="fw-bold fs-3 mb-3">Destacado</h2>
+                    <div class="ratio ratio-16x9">
+                        <img
+                            class="w-100 rounded-4"
+                            src="assets/img/casa-de-papel.webp"
+                            alt=""
+                        />
+                    </div>
+                    <p class="h2 fw-bold my-3">La Casa de Papel</p>
+                    <p class="text-wrap">
                         Lorem ipsum dolor sit amet consectetur, adipisicing
                         elit. Iure alias, dicta magni nam ipsa tempore eum aut
                         quidem, inventore reiciendis assumenda soluta
                         consequatur minima! Quibusdam dolore soluta odio? Ad
-                        natus dolor veniam at ipsam porro in, officia aliquid
-                        obcaecati possimus dignissimos veritatis similique non,
-                        ducimus eius necessitatibus maxime provident repellat.
+                        natus dolor veniam at ipsam porro in.
                     </p>
-                    <div>
+                    <div
+                        class="d-flex justify-content-between align-items-center me-5 fw-bold"
+                    >
                         <p>Fantasy/Sci-Fi</p>
                         <p>2018</p>
                         <p>2h 16m</p>
                     </div>
                 </article>
 
-                <article>
+                <article class="col-7">
                     <article>
-                        <h3>Novedades</h3>
-                        <div>
-                            <img src="assets/img/wolverine.webp" alt="" />
-                            <img src="assets/img/annabelle.webp" alt="" />
+                        <h3 class="fw-bold fs-4 mt-3 mb-2">Novedades</h3>
+                        <div
+                            class="d-flex justify-content-between align-items-center"
+                        >
+                            <img
+                                src="assets/img/wolverine.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
+                            <img
+                                src="assets/img/annabelle.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
                             <img
                                 src="assets/img/guardians-of-galaxy.webp"
                                 alt=""
+                                class="img small rounded-4"
                             />
-                            <img src="assets/img/killbill.webp" alt="" />
+                            <img
+                                src="assets/img/killbill.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
                             <img
                                 src="assets/img/bohemian-rhapsody.webp"
                                 alt=""
+                                class="img small rounded-4"
                             />
                         </div>
                     </article>
 
                     <article>
-                        <h3>Recomendados</h3>
-                        <div>
-                            <img src="assets/img/wolverine.webp" alt="" />
-                            <img src="assets/img/annabelle.webp" alt="" />
+                        <h3 class="fw-bold fs-4 mt-3 mb-2">Recomendados</h3>
+                        <div
+                            class="d-flex justify-content-between align-items-center"
+                        >
+                            <img
+                                src="assets/img/wolverine.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
+                            <img
+                                src="assets/img/annabelle.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
                             <img
                                 src="assets/img/guardians-of-galaxy.webp"
                                 alt=""
+                                class="img small rounded-4"
                             />
-                            <img src="assets/img/killbill.webp" alt="" />
+                            <img
+                                src="assets/img/killbill.webp"
+                                alt=""
+                                class="img small rounded-4"
+                            />
                             <img
                                 src="assets/img/bohemian-rhapsody.webp"
                                 alt=""
+                                class="img small rounded-4"
                             />
                         </div>
                     </article>
@@ -133,26 +233,78 @@
             </section>
 
             <section class="family">
-                <h2>Familia</h2>
-                <article>
-                    <img src="assets/img/wolverine.webp" alt="" />
-                    <img src="assets/img/annabelle.webp" alt="" />
-                    <img src="assets/img/guardians-of-galaxy.webp" alt="" />
-                    <img src="assets/img/killbill.webp" alt="" />
-                    <img src="assets/img/bohemian-rhapsody.webp" alt="" />
-                    <img src="assets/img/ironman.webp" alt="" />
+                <h2 class="fw-bold fs-3 mb-3">Familia</h2>
+                <article
+                    class="d-flex justify-content-between align-items-center"
+                >
+                    <img
+                        src="assets/img/wolverine.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/annabelle.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/guardians-of-galaxy.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/killbill.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/bohemian-rhapsody.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/ironman.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
                 </article>
             </section>
 
             <section class="comedy">
-                <h2>Comedia</h2>
-                <article>
-                    <img src="assets/img/wolverine.webp" alt="" />
-                    <img src="assets/img/annabelle.webp" alt="" />
-                    <img src="assets/img/guardians-of-galaxy.webp" alt="" />
-                    <img src="assets/img/killbill.webp" alt="" />
-                    <img src="assets/img/bohemian-rhapsody.webp" alt="" />
-                    <img src="assets/img/ironman.webp" alt="" />
+                <h2 class="fw-bold fs-3 mb-3">Comedia</h2>
+                <article
+                    class="d-flex justify-content-between align-items-center"
+                >
+                    <img
+                        src="assets/img/wolverine.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/annabelle.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/guardians-of-galaxy.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/killbill.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/bohemian-rhapsody.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
+                    <img
+                        src="assets/img/ironman.webp"
+                        alt=""
+                        class="img big rounded-4"
+                    />
                 </article>
             </section>
 
