--- a/index.html
+++ b/index.html
@@ -27,28 +27,30 @@
     <body class="d-flex">
         <div class="vh-100 p-4 position-sticky top-0">
             <nav
-                class="sidebar navbar d-flex flex-column justify-content-between align-items-center h-100 p-4 rounded-4"
+                class="sidebar navbar d-flex flex-column justify-content-between align-items-center h-100 px-3 pt-4 rounded-4"
             >
                 <ul
                     class="list-unstyled d-flex flex-column justify-content-center align-items-center gap-4"
                 >
                     <li>
-                        <a href="#"
-                            ><i class="fs-5 fa-solid fa-house-chimney"></i
-                        ></a>
+                        <a href="#" class="sidebar-icon p-2 rounded-3">
+                            <i class="fs-5 fa-solid fa-house-chimney"></i>
+                        </a>
                     </li>
                     <li>
-                        <a href="#"><i class="fs-5 fa-solid fa-user"></i></a>
+                        <a href="#" class="sidebar-icon p-2 rounded-3">
+                            <i class="fs-5 fa-solid fa-user"></i>
+                        </a>
                     </li>
                     <li>
-                        <a href="#"
-                            ><i class="fs-5 fa-solid fa-paper-plane"></i
-                        ></a>
+                        <a href="#" class="sidebar-icon p-2 rounded-3">
+                            <i class="fs-5 fa-solid fa-paper-plane"></i>
+                        </a>
                     </li>
                 </ul>
-                <a href="#"
-                    ><i class="fs-5 fa-solid fa-right-from-bracket"></i
-                ></a>
+                <a href="#" class="sidebar-icon p-2 rounded-3">
+                    <i class="fs-5 fa-solid fa-right-from-bracket"></i>
+                </a>
             </nav>
         </div>
 
@@ -59,13 +61,14 @@
                     <h1 class="fw-bold mx-2 my-0">Movie Dump</h1>
                 </a>
 
-                <div class="d-flex gap-4">
+                <div id="login-panel" class="d-flex gap-4">
                     <button
                         class="btn-account btn-login btn px-5 py-2 rounded-4"
                     >
                         Log In
                     </button>
                     <button
+                        id="signup-button"
                         class="btn-account btn-signup btn px-5 py-2 rounded-4"
                     >
                         Sign Up
@@ -73,53 +76,26 @@
                 </div>
             </header>
 
-            <!--             <section class="d-flex justify-content-between align-items-center"> -->
-            <!-- <section class="carousel slide">
-                <div class="carousel-inner slides5">
-                    <div class="carousel-item active">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Max
-                        </button>
-                    </div>
-                    <div class="carousel-item">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Netflix
-                        </button>
-                    </div>
-                    <div class="carousel-item">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Disney
-                        </button>
-                    </div>
-                    <div class="carousel-item">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Prime
-                        </button>
-                    </div>
-                    <div class="carousel-item">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Claro
-                        </button>
-                    </div>
-                    <div class="carousel-item">
-                        <button
-                            class="btn-platform btn rounded-4"
-                        >
-                            Paramount
-                        </button>
-                    </div>
-                </div>
-            </section> -->
+            <section class="d-flex justify-content-between align-items-center">
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Max
+                </button>
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Netflix
+                </button>
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Disney
+                </button>
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Prime
+                </button>
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Claro
+                </button>
+                <button class="btn-platform btn px-4 py-3 rounded-4">
+                    Paramount
+                </button>
+            </section>
 
             <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner" data-bs-visible="3">
