:sparkles: Added signup form

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
 
                 <div id="login-panel" class="d-flex gap-4">
                     <button
+                        id="login-redirect"
                         class="btn-account btn-login btn px-5 py-2 rounded-4"
                     >
                         Log In
                     </button>
                     <button
-                        id="signup-button"
+                        id="signup-redirect"
                         class="btn-account btn-signup btn px-5 py-2 rounded-4"
                     >
                         Sign Up
