--- a/register.html
+++ b/register.html
@@ -20,20 +20,32 @@
     <body class="d-flex justify-content-center align-items-center vh-100">
         <div class="d-flex p-0">
             <section
-                class="img-container d-flex justify-content-center align-items-center rounded-start-4"
+                class="img-container d-flex justify-content-center align-items-center px-4 rounded-start-4"
             >
-                <img
-                    src="assets/img/undraw_movie_night.svg"
-                    alt=""
-                    width="360"
-                />
+                <img src="assets/img/undraw_playlist.svg" alt="" width="360" />
             </section>
             <section class="form-container dark-text px-4 py-5 rounded-end-5">
                 <form
                     class="d-flex flex-column align-items-start justify-content-center"
                 >
-                    <h2 class="fw-bold">¡Bienvenid@!</h2>
-                    <p class="pb-3">Por favor inicia sesión para continuar</p>
+                    <h2 class="fw-bold">Cuenta nueva</h2>
+                    <p class="pb-3">
+                        Regístrate y disfruta de todos los beneficios de Movie
+                        Dump
+                    </p>
+                    <input
+                        class="form-control my-2"
+                        type="text"
+                        placeholder="Nombre"
+                        required
+                    />
+                    <input
+                        class="form-control my-2"
+                        type="tel"
+                        pattern="[0-9]{10}"
+                        placeholder="Teléfono"
+                        required
+                    />
                     <input
                         class="form-control my-2"
                         type="email"
@@ -51,36 +63,17 @@
                         Tu contraseña debe ser de 8 a 20 caracteres. Debe
                         contener letras y números sin espacios.
                     </div>
-                    <div class="form-check mb-3">
-                        <input
-                            class="form-check-input"
-                            type="checkbox"
-                            id="remember"
-                        />
-                        <label
-                            class="remember-text form-check-label"
-                            for="remember"
-                        >
-                            Mantener la sesión iniciada
-                        </label>
-                    </div>
                     <button
-                        id="login"
+                        id="signup"
                         class="w-100 py-2 mt-2 btn btn-login btn-form text-white"
                     >
-                        Iniciar sesión
+                        Registrarse
                     </button>
                 </form>
 
-                <div class="d-flex justify-content-between login-links w-100">
-                    <a
-                        href="../register.html"
-                        class="dark-text links underline"
-                    >
-                        ¿No estás registrado?
-                    </a>
-                    <a href="#" class="dark-text links underline" id="forgot">
-                        Olvidé mi contraseña
+                <div class="d-flex justify-content-end login-links w-100">
+                    <a href="../login.html" class="dark-text links underline">
+                        ¿Ya tienes una cuenta?
                     </a>
                 </div>
             </section>
