--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
                         <a class="footer-link underline" href="#">Inicio</a>
                     </li>
                     <li>
-                        <a class="footer-link underline" href="/register.html">
+                        <a class="footer-link underline" href="pages/register.html">
                             Registro
                         </a>
                     </li>
                     <li>
-                        <a class="footer-link underline" href="/contact.html">
+                        <a class="footer-link underline" href="pages/contact.html">
                             Contacto
                         </a>
                     </li>
