:bug: Fixed contact spacing

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <main class="vh-100 pt-4 pb-3">
-            <section class="container row p-0 mx-auto my-4">
+            <section class="container row justify-content-evenly p-0 mx-auto my-4">
                 <form class="col-6 px-5 row gx-3">
                     <h1 class="h2 fw-bold">Contáctanos</h1>
                     <p class="pb-2">Te contactaremos... Algún día :'D</p>
